--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -29,8 +29,8 @@
         .timeline()
         .set(".intro", { opacity: 1 })
         .to(lottieContainer, {
-          top: window.innerWidth < 1024 ? 23 : 16,
-          left: window.innerWidth < 1024 ? logoLeft - 3 : 29,
+          top: window.innerWidth < 1024 ? 23 : 8,
+          left: logoLeft - 4,
           delay: 3.5,
           width: 59,
           height: 59,
