--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -116,7 +116,7 @@ import menu from "../collections/menu.json"
 <style>
   @reference '../styles/global.css';
   nav {
-    @apply w-full max-w-screen mx-auto;
+    @apply w-full max-w-site mx-auto;
     @apply flex flex-col lg:flex-row justify-between items-center py-4 px-8 h-[90px] space-y-4;
     .logo-area {
       @apply flex items-center;
