:zap: added inverted-area class to the video section on hero bento box

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -20,7 +20,7 @@ import video from "../assets/video/waves.mp4"
         <div class="overlay"></div>
       </div>
       <div class="bento-item bento-2">2</div>
-      <div class="bento-item bento-3">
+      <div class="bento-item bento-3  invert-area">
                 <video class="bg-video" width="600" height="100%" autoplay loop muted playsinline>
           <source src={video} />
         </video>
