--- a/src/components/Mouse.astro
+++ b/src/components/Mouse.astro
@@ -150,7 +150,9 @@
 </script>
 
 <style>
+  @reference "../styles/global.css";
 body .cursor {
+  @apply hidden lg:block;
   pointer-events: none;
   z-index: 1000;
   position: fixed;
