--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import About from '../components/About.astro';
 import Hero from '../components/Hero.astro';
 import Spacer from '../components/Padding.astro';
 import Layout from '../layouts/Layout.astro';
@@ -10,11 +11,7 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 	<Hero />
+	<About />
 	<Spacer />
 </Layout>
 
-<script>
-	import { initSmoothScrolling } from "../scripts/smoothScroll.ts";
-
-	initSmoothScrolling();
-</script>
