--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -22,6 +22,7 @@
       animationData: animation,
     })
     LottieAnimation.setSpeed(0.6)
+
     manager.ctx?.add(() => {
       const logoLeft =
         document.querySelector(".logo-area")?.getBoundingClientRect().left || 0
@@ -31,18 +32,19 @@
         .to(lottieContainer, {
           top: window.innerWidth < 1024 ? 23 : 8,
           left: logoLeft - 4,
-          delay: 3.5,
+          delay: 4,
           width: 59,
           height: 59,
           duration: 1,
+          onComplete: () => {
+            setIntroComplete(true)
+          },
         })
         .to(".intro", {
           duration: 1,
           opacity: 0,
-          delay: 0,
-          ease: "power2.inOut",
+          ease: "power4.in",
           onComplete: () => {
-            setIntroComplete(true);
             LottieAnimation.destroy()
             const el = document.querySelector(".intro")
             if (el) {
@@ -74,7 +76,7 @@
 <style>
   section.intro {
     @reference '../styles/global.css';
-    @apply fixed top-0 left-0 overflow-hidden w-screen h-screen flex items-center justify-center bg-white z-50;
+    @apply fixed top-0 left-0 overflow-hidden w-screen h-screen flex items-center justify-center bg-white z-90;
     .lottie-intro-container {
       @apply absolute w-60 h-60;
     }
