--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import menu from "../collections/menu.json"
 <nav>
   <div class="logo-area">
     <a href="#home" class="logo hoverable">
-      <Image src={Logo} width={50} height={50} alt="Logo" />
+      <Image src={Logo} width={50} height={50} alt="Logo" loading="eager" />
     </a>
   </div>
   <div class="menu">
